Add nested field support for Avro [HZ-2509, HZ-3062] (#25269)
This PR
1. refactors usages of CREATE TYPE and INSERT INTO statements,
2. refactors usages of factoryId/classId/version triplets,
3. decouples serialization format from user-defined types,
4. adds nested field support for Avro,
5. fixes HazelcastObjectType#digest and deletes HazelcastObjectTypeReference.

Notes:
- Type options always override mapping options. Specifically, if the mapping has only "__key" or "this" fields, and both the mapping and type define a schema ID, the one defined by the type is used. This also means that, in such situations, as long as the type defines a schema ID, the mapping does not need to.

Breaking changes:
- User must drop all user-defined types (UDTs) and mappings with UDTs before the rolling upgrade, and recreate them with the new semantics after upgrading.

Closes HZ-2509
Closes HZ-3062