@@ -16,143 +16,94 @@
 
 package com.hazelcast.jet.sql.impl.connector.kafka;
 
-import com.google.common.collect.ImmutableMap;
 import com.hazelcast.core.HazelcastJsonValue;
-import com.hazelcast.jet.kafka.impl.KafkaTestSupport;
-import com.hazelcast.jet.sql.SqlTestSupport;
 import com.hazelcast.jet.sql.impl.connector.test.TestAllTypesSqlConnector;
-import com.hazelcast.sql.HazelcastSqlException;
-import com.hazelcast.sql.SqlService;
 import org.apache.kafka.common.serialization.ByteArrayDeserializer;
 import org.apache.kafka.common.serialization.ByteArraySerializer;
 import org.apache.kafka.common.serialization.StringDeserializer;
-import org.junit.AfterClass;
-import org.junit.BeforeClass;
 import org.junit.Test;
 
-import java.io.IOException;
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.time.OffsetDateTime;
+import java.util.List;
 import java.util.Map;
 
-import static com.hazelcast.jet.core.TestUtil.createMap;
+import static com.hazelcast.jet.pipeline.file.JsonFileFormat.FORMAT_JSON;
 import static com.hazelcast.jet.sql.impl.connector.SqlConnector.JSON_FLAT_FORMAT;
 import static com.hazelcast.jet.sql.impl.connector.SqlConnector.OPTION_KEY_FORMAT;
 import static com.hazelcast.jet.sql.impl.connector.SqlConnector.OPTION_VALUE_FORMAT;
-import static java.lang.String.format;
 import static java.time.ZoneOffset.UTC;
-import static java.util.Arrays.asList;
-import static java.util.Collections.singletonList;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
-public class SqlJsonTest extends SqlTestSupport {
-
+public class SqlJsonTest extends KafkaSqlTestSupport {
     private static final int INITIAL_PARTITION_COUNT = 4;
 
-    private static KafkaTestSupport kafkaTestSupport;
-
-    private static SqlService sqlService;
-
-    @BeforeClass
-    public static void setUpClass() throws IOException {
-        initialize(1, null);
-        sqlService = instance().getSql();
-
-        kafkaTestSupport = KafkaTestSupport.create();
-        kafkaTestSupport.createKafkaCluster();
-    }
-
-    @AfterClass
-    public static void tearDownClass() {
-        kafkaTestSupport.shutdownKafkaCluster();
+    private static SqlMapping kafkaMapping(String name) {
+        return new SqlMapping(name, KafkaSqlConnector.class)
+                .options(OPTION_KEY_FORMAT, JSON_FLAT_FORMAT,
+                         OPTION_VALUE_FORMAT, JSON_FLAT_FORMAT,
+                         "bootstrap.servers", kafkaTestSupport.getBrokerConnectionString(),
+                         "auto.offset.reset", "earliest");
     }
 
     @Test
     public void test_nulls() {
         String name = createRandomTopic();
-        sqlService.execute("CREATE MAPPING " + name + " ("
-                + "id INT EXTERNAL NAME \"__key.id\""
-                + ", name VARCHAR EXTERNAL NAME \"this.name\""
-                + ") TYPE " + KafkaSqlConnector.TYPE_NAME + ' '
-                + "OPTIONS ( "
-                + '\'' + OPTION_KEY_FORMAT + "'='" + JSON_FLAT_FORMAT + '\''
-                + ", '" + OPTION_VALUE_FORMAT + "'='" + JSON_FLAT_FORMAT + '\''
-                + ", 'bootstrap.servers'='" + kafkaTestSupport.getBrokerConnectionString() + '\''
-                + ", 'auto.offset.reset'='earliest'"
-                + ")"
-        );
+        kafkaMapping(name)
+                .fields("id INT EXTERNAL NAME \"__key.id\"",
+                        "name VARCHAR EXTERNAL NAME \"this.name\"")
+                .create();
 
         assertTopicEventually(
                 name,
                 "INSERT INTO " + name + " VALUES (null, null)",
-                createMap("{\"id\":null}", "{\"name\":null}")
+                Map.of("{\"id\":null}", "{\"name\":null}")
         );
         assertRowsEventuallyInAnyOrder(
                 "SELECT * FROM " + name,
-                singletonList(new Row(null, null))
+                List.of(new Row(null, null))
         );
     }
 
     @Test
     public void test_fieldsMapping() {
         String name = createRandomTopic();
-        sqlService.execute("CREATE MAPPING " + name + " ("
-                + "key_name VARCHAR EXTERNAL NAME \"__key.name\""
-                + ", value_name VARCHAR EXTERNAL NAME \"this.name\""
-                + ") TYPE " + KafkaSqlConnector.TYPE_NAME + ' '
-                + "OPTIONS ( "
-                + '\'' + OPTION_KEY_FORMAT + "'='" + JSON_FLAT_FORMAT + '\''
-                + ", '" + OPTION_VALUE_FORMAT + "'='" + JSON_FLAT_FORMAT + '\''
-                + ", 'bootstrap.servers'='" + kafkaTestSupport.getBrokerConnectionString() + '\''
-                + ", 'auto.offset.reset'='earliest'"
-                + ")"
-        );
+        kafkaMapping(name)
+                .fields("key_name VARCHAR EXTERNAL NAME \"__key.name\"",
+                        "value_name VARCHAR EXTERNAL NAME \"this.name\"")
+                .create();
 
         assertTopicEventually(
                 name,
                 "INSERT INTO " + name + " (value_name, key_name) VALUES ('Bob', 'Alice')",
-                createMap("{\"name\":\"Alice\"}", "{\"name\":\"Bob\"}")
+                Map.of("{\"name\":\"Alice\"}", "{\"name\":\"Bob\"}")
         );
         assertRowsEventuallyInAnyOrder(
                 "SELECT * FROM " + name,
-                singletonList(new Row("Alice", "Bob"))
+                List.of(new Row("Alice", "Bob"))
         );
     }
 
     @Test
     public void test_schemaEvolution() {
         String name = createRandomTopic();
-        sqlService.execute("CREATE MAPPING " + name + " ("
-                + "id INT EXTERNAL NAME \"__key.id\""
-                + ", name VARCHAR"
-                + ") TYPE " + KafkaSqlConnector.TYPE_NAME + ' '
-                + "OPTIONS ( "
-                + '\'' + OPTION_KEY_FORMAT + "'='" + JSON_FLAT_FORMAT + '\''
-                + ", '" + OPTION_VALUE_FORMAT + "'='" + JSON_FLAT_FORMAT + '\''
-                + ", 'bootstrap.servers'='" + kafkaTestSupport.getBrokerConnectionString() + '\''
-                + ", 'auto.offset.reset'='earliest'"
-                + ")"
-        );
+        kafkaMapping(name)
+                .fields("id INT EXTERNAL NAME \"__key.id\"",
+                        "name VARCHAR")
+                .create();
 
         // insert initial record
         sqlService.execute("INSERT INTO " + name + " VALUES (13, 'Alice')");
 
         // alter schema
-        sqlService.execute("CREATE OR REPLACE MAPPING " + name + " ("
-                + "id INT EXTERNAL NAME \"__key.id\""
-                + ", name VARCHAR"
-                + ", ssn BIGINT"
-                + ") TYPE " + KafkaSqlConnector.TYPE_NAME + ' '
-                + "OPTIONS ( "
-                + '\'' + OPTION_KEY_FORMAT + "'='" + JSON_FLAT_FORMAT + '\''
-                + ", '" + OPTION_VALUE_FORMAT + "'='" + JSON_FLAT_FORMAT + '\''
-                + ", 'bootstrap.servers'='" + kafkaTestSupport.getBrokerConnectionString() + '\''
-                + ", 'auto.offset.reset'='earliest'"
-                + ")"
-        );
+        kafkaMapping(name)
+                .fields("id INT EXTERNAL NAME \"__key.id\"",
+                        "name VARCHAR",
+                        "ssn BIGINT")
+                .createOrReplace();
 
         // insert record against new schema
         sqlService.execute("INSERT INTO " + name + " VALUES (69, 'Bob', 123456789)");
@@ -160,7 +111,7 @@ public class SqlJsonTest extends SqlTestSupport {
         // assert both - initial & evolved - records are correctly read
         assertRowsEventuallyInAnyOrder(
                 "SELECT * FROM " + name,
-                asList(
+                List.of(
                         new Row(13, "Alice", null),
                         new Row(69, "Bob", 123456789L)
                 )
@@ -173,37 +124,30 @@ public class SqlJsonTest extends SqlTestSupport {
         TestAllTypesSqlConnector.create(sqlService, from);
 
         String to = createRandomTopic();
-        sqlService.execute("CREATE MAPPING " + to + " ("
-                + "id VARCHAR EXTERNAL NAME \"__key.id\""
-                + ", string VARCHAR"
-                + ", \"boolean\" BOOLEAN"
-                + ", byte TINYINT"
-                + ", short SMALLINT"
-                + ", \"int\" INT"
-                + ", long BIGINT"
-                + ", \"float\" REAL"
-                + ", \"double\" DOUBLE"
-                + ", \"decimal\" DECIMAL"
-                + ", \"time\" TIME"
-                + ", \"date\" DATE"
-                + ", \"timestamp\" TIMESTAMP"
-                + ", timestampTz TIMESTAMP WITH TIME ZONE"
-                + ", map OBJECT"
-                + ", object OBJECT"
-                + ") TYPE " + KafkaSqlConnector.TYPE_NAME + ' '
-                + "OPTIONS ( "
-                + '\'' + OPTION_KEY_FORMAT + "'='" + JSON_FLAT_FORMAT + '\''
-                + ", '" + OPTION_VALUE_FORMAT + "'='" + JSON_FLAT_FORMAT + '\''
-                + ", 'bootstrap.servers'='" + kafkaTestSupport.getBrokerConnectionString() + '\''
-                + ", 'auto.offset.reset'='earliest'"
-                + ")"
-        );
+        kafkaMapping(to)
+                .fields("id VARCHAR EXTERNAL NAME \"__key.id\"",
+                        "string VARCHAR",
+                        "\"boolean\" BOOLEAN",
+                        "byte TINYINT",
+                        "short SMALLINT",
+                        "\"int\" INT",
+                        "long BIGINT",
+                        "\"float\" REAL",
+                        "\"double\" DOUBLE",
+                        "\"decimal\" DECIMAL",
+                        "\"time\" TIME",
+                        "\"date\" DATE",
+                        "\"timestamp\" TIMESTAMP",
+                        "timestampTz TIMESTAMP WITH TIME ZONE",
+                        "map OBJECT",
+                        "object OBJECT")
+                .create();
 
         sqlService.execute("INSERT INTO " + to + " SELECT '1', f.* FROM " + from + " f");
 
         assertRowsEventuallyInAnyOrder(
                 "SELECT * FROM " + to,
-                singletonList(new Row(
+                List.of(new Row(
                         "1",
                         "string",
                         true,
@@ -218,7 +162,7 @@ public class SqlJsonTest extends SqlTestSupport {
                         LocalDate.of(2020, 4, 15),
                         LocalDateTime.of(2020, 4, 15, 12, 23, 34, 1_000_000),
                         OffsetDateTime.of(2020, 4, 15, 12, 23, 34, 200_000_000, UTC),
-                        ImmutableMap.of("42", 43), // JSON serializer stores maps as JSON objects, the key is converted to a string
+                        Map.of("42", 43), // JSON serializer stores maps as JSON objects, the key is converted to a string
                         null
                 ))
         );
@@ -226,11 +170,30 @@ public class SqlJsonTest extends SqlTestSupport {
 
     @Test
     public void when_createMappingNoColumns_then_fail() {
-        assertThatThrownBy(() ->
-                sqlService.execute("CREATE MAPPING kafka "
-                        + "TYPE " + KafkaSqlConnector.TYPE_NAME + ' '
-                        + "OPTIONS ('valueFormat'='" + JSON_FLAT_FORMAT + "')"))
+        assertThatThrownBy(() -> kafkaMapping("kafka").create())
                 .hasMessage("Column list is required for JSON format");
+    }
+
+    @Test
+    public void test_jsonType() {
+        String name = createRandomTopic();
+        kafkaMapping(name)
+                .options(OPTION_KEY_FORMAT, FORMAT_JSON,
+                         OPTION_VALUE_FORMAT, FORMAT_JSON)
+                .create();
+
+        assertTopicEventually(
+                name,
+                "INSERT INTO " + name + " VALUES ('[1,2,3]', '[4,5,6]')",
+                Map.of("[1,2,3]", "[4,5,6]")
+        );
+        assertRowsEventuallyInAnyOrder(
+                "SELECT * FROM " + name,
+                List.of(new Row(
+                        new HazelcastJsonValue("[1,2,3]"),
+                        new HazelcastJsonValue("[4,5,6]")
+                ))
+        );
     }
 
     @Test
@@ -243,97 +206,47 @@ public class SqlJsonTest extends SqlTestSupport {
         when_explicitTopLevelField_then_fail("this", "__key");
     }
 
-    @Test
-    public void test_jsonType() {
-        String name = createRandomTopic();
-
-        String createSql = format("CREATE MAPPING %s TYPE %s ", name, KafkaSqlConnector.TYPE_NAME)
-                + "OPTIONS ( "
-                + format("'%s' = 'json'", OPTION_KEY_FORMAT)
-                + format(", '%s' = 'json'", OPTION_VALUE_FORMAT)
-                + format(", 'bootstrap.servers' = '%s'", kafkaTestSupport.getBrokerConnectionString())
-                + ", 'auto.offset.reset' = 'earliest'"
-                + ")";
-
-        sqlService.execute(createSql);
-
-        assertTopicEventually(
-                name,
-                "INSERT INTO " + name + " VALUES ('[1,2,3]', '[4,5,6]')",
-                createMap("[1,2,3]", "[4,5,6]")
-        );
-        assertRowsEventuallyInAnyOrder(
-                "SELECT * FROM " + name,
-                singletonList(new Row(
-                        new HazelcastJsonValue("[1,2,3]"),
-                        new HazelcastJsonValue("[4,5,6]")
-                ))
-        );
-    }
-
     private void when_explicitTopLevelField_then_fail(String field, String otherField) {
         assertThatThrownBy(() ->
-                sqlService.execute("CREATE MAPPING kafka ("
-                        + field + " VARCHAR"
-                        + ", f VARCHAR EXTERNAL NAME \"" + otherField + ".f\""
-                        + ") TYPE " + KafkaSqlConnector.TYPE_NAME + ' '
-                        + "OPTIONS ("
-                        + '\'' + OPTION_KEY_FORMAT + "'='" + JSON_FLAT_FORMAT + '\''
-                        + ", '" + OPTION_VALUE_FORMAT + "'='" + JSON_FLAT_FORMAT + '\''
-                        + ", 'bootstrap.servers'='" + kafkaTestSupport.getBrokerConnectionString() + '\''
-                        + ", 'auto.offset.reset'='earliest'"
-                        + ")"))
-                .isInstanceOf(HazelcastSqlException.class)
-                .hasMessage("Cannot use the '" + field + "' field with JSON serialization");
+                kafkaMapping("kafka")
+                        .fields(field + " VARCHAR",
+                                "f VARCHAR EXTERNAL NAME \"" + otherField + ".f\"")
+                        .create())
+                .hasMessage("Cannot use '" + field + "' field with JSON serialization");
     }
 
     @Test
     public void test_writingToTopLevel() {
         String mapName = randomName();
-        sqlService.execute("CREATE MAPPING " + mapName + "("
-                + "id INT EXTERNAL NAME \"__key.id\""
-                + ", name VARCHAR"
-                + ") TYPE " + KafkaSqlConnector.TYPE_NAME + ' '
-                + "OPTIONS ("
-                + '\'' + OPTION_KEY_FORMAT + "'='" + JSON_FLAT_FORMAT + '\''
-                + ", '" + OPTION_VALUE_FORMAT + "'='" + JSON_FLAT_FORMAT + '\''
-                + ", 'bootstrap.servers'='" + kafkaTestSupport.getBrokerConnectionString() + '\''
-                + ", 'auto.offset.reset'='earliest'"
-                + ")"
-        );
+        kafkaMapping(mapName)
+                .fields("id INT EXTERNAL NAME \"__key.id\"",
+                        "name VARCHAR")
+                .create();
 
         assertThatThrownBy(() ->
-                sqlService.execute("INSERT INTO " + mapName + "(__key, name) VALUES('{\"id\":1}', null)"))
-                .isInstanceOf(HazelcastSqlException.class)
+                sqlService.execute("INSERT INTO " + mapName + "(__key, name) VALUES ('{\"id\":1}', null)"))
                 .hasMessageContaining("Writing to top-level fields of type OBJECT not supported");
 
         assertThatThrownBy(() ->
-                sqlService.execute("INSERT INTO " + mapName + "(id, this) VALUES(1, '{\"name\":\"foo\"}')"))
-                .isInstanceOf(HazelcastSqlException.class)
+                sqlService.execute("INSERT INTO " + mapName + "(id, this) VALUES (1, '{\"name\":\"foo\"}')"))
                 .hasMessageContaining("Writing to top-level fields of type OBJECT not supported");
     }
 
     @Test
     public void test_topLevelFieldExtraction() {
         String name = createRandomTopic();
-        sqlService.execute("CREATE MAPPING " + name + " ("
-                + "id INT EXTERNAL NAME \"__key.id\""
-                + ", name VARCHAR"
-                + ") TYPE " + KafkaSqlConnector.TYPE_NAME + ' '
-                + "OPTIONS ( "
-                + '\'' + OPTION_KEY_FORMAT + "'='" + JSON_FLAT_FORMAT + '\''
-                + ", '" + OPTION_VALUE_FORMAT + "'='" + JSON_FLAT_FORMAT + '\''
-                + ", 'bootstrap.servers'='" + kafkaTestSupport.getBrokerConnectionString() + '\''
-                + ", 'auto.offset.reset'='earliest'"
-                + ")"
-        );
+        kafkaMapping(name)
+                .fields("id INT EXTERNAL NAME \"__key.id\"",
+                        "name VARCHAR")
+                .create();
+
         sqlService.execute("INSERT INTO " + name + " VALUES (1, 'Alice')");
 
         assertRowsEventuallyInAnyOrder(
                 "SELECT __key, this FROM " + name,
-                singletonList(new Row(
-                        ImmutableMap.of("id", 1),
-                        ImmutableMap.of("name", "Alice")
+                List.of(new Row(
+                        Map.of("id", 1),
+                        Map.of("name", "Alice")
                 ))
         );
     }
@@ -341,37 +254,28 @@ public class SqlJsonTest extends SqlTestSupport {
     @Test
     public void test_explicitKeyAndValueSerializers() {
         String name = createRandomTopic();
-        sqlService.execute("CREATE MAPPING " + name + " ("
-                + "key_name VARCHAR EXTERNAL NAME \"__key.name\""
-                + ", value_name VARCHAR EXTERNAL NAME \"this.name\""
-                + ") TYPE " + KafkaSqlConnector.TYPE_NAME + ' '
-                + "OPTIONS ( "
-                + '\'' + OPTION_KEY_FORMAT + "'='" + JSON_FLAT_FORMAT + '\''
-                + ", '" + OPTION_VALUE_FORMAT + "'='" + JSON_FLAT_FORMAT + '\''
-                + ", 'key.serializer'='" + ByteArraySerializer.class.getCanonicalName() + '\''
-                + ", 'key.deserializer'='" + ByteArrayDeserializer.class.getCanonicalName() + '\''
-                + ", 'value.serializer'='" + ByteArraySerializer.class.getCanonicalName() + '\''
-                + ", 'value.deserializer'='" + ByteArrayDeserializer.class.getCanonicalName() + '\''
-                + ", 'bootstrap.servers'='" + kafkaTestSupport.getBrokerConnectionString() + '\''
-                + ", 'auto.offset.reset'='earliest'"
-                + ")"
-        );
+        kafkaMapping(name)
+                .fields("key_name VARCHAR EXTERNAL NAME \"__key.name\"",
+                        "value_name VARCHAR EXTERNAL NAME \"this.name\"")
+                .options("key.serializer", ByteArraySerializer.class.getCanonicalName(),
+                         "key.deserializer", ByteArrayDeserializer.class.getCanonicalName(),
+                         "value.serializer", ByteArraySerializer.class.getCanonicalName(),
+                         "value.deserializer", ByteArrayDeserializer.class.getCanonicalName())
+                .create();
 
         assertTopicEventually(
                 name,
                 "INSERT INTO " + name + " (value_name, key_name) VALUES ('Bob', 'Alice')",
-                createMap("{\"name\":\"Alice\"}", "{\"name\":\"Bob\"}")
+                Map.of("{\"name\":\"Alice\"}", "{\"name\":\"Bob\"}")
         );
         assertRowsEventuallyInAnyOrder(
                 "SELECT * FROM " + name,
-                singletonList(new Row("Alice", "Bob"))
+                List.of(new Row("Alice", "Bob"))
         );
     }
 
     private static String createRandomTopic() {
-        String topicName = "t_" + randomString().replace('-', '_');
-        kafkaTestSupport.createTopic(topicName, INITIAL_PARTITION_COUNT);
-        return topicName;
+        return createRandomTopic(INITIAL_PARTITION_COUNT);
     }
 
     private static void assertTopicEventually(String name, String sql, Map<String, String> expected) {
